# II3502_Lab6

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  run-docker-windows.sh
report/: 2025_26_Distributed_Architectures_and_Programming_Lab6_Spark_Report_Joaquim_KELOGLANIAN.aux  2025_26_Distributed_Architectures_and_Programming_Lab6_Spark_Report_Joaquim_KELOGLANIAN.out  2025_26_Distributed_Architectures_and_Programming_Lab6_Spark_Report_Joaquim_KELOGLANIAN.tex  2025_26_Distributed_Architectures_and_Programming_Lab6_Spark_Report_Joaquim_KELOGLANIAN.toc
report/screenshots/: SCREENSHOTS.md
src/main/python/ii3502_lab6/: __init__.py  climate_analysis.py  station_map.py
src/main/resources/data/: 01001099999.csv  01001499999.csv  01002099999.csv  sample_2025.csv
src/main/resources/output/extreme_events/: .part-00000.crc  part-00000
src/main/resources/output/highest_max_temp/: .part-00000.crc  part-00000
src/main/resources/output/monthly_avg_temp/: .part-00000.crc  part-00000
src/main/resources/output/seasonal_prcp/: .part-00000.crc  part-00000
src/main/resources/output/summary/: .part-00000.crc  part-00000
src/main/resources/output/yearly_avg_temp/: .part-00000.crc  part-00000
src/test/integration/: test_end_to_end.py
src/test/python/: test_climate_analysis.py  test_spark.py  test_station_map.py
